--- a/content/workshop/2025-07-22-test2.md
+++ b/content/workshop/2025-07-22-test2.md
@@ -1,6 +1,6 @@
 ---
 title: Test4
 date: 2025-07-22T10:47:00+02:00
-image: /img/workshop.jpg
+image: images/articles/workshop.jpg
 ---
 Das ist ein Test
