--- a/content/workshop/2025-07-23-test.md
+++ b/content/workshop/2025-07-23-test.md
@@ -1,7 +1,7 @@
 ---
 title: Workshop 2023
 date: 2025-07-22T10:47:00+02:00
-image: /img/workshop.jpg
+image: images/articles/workshop.jpg
 ---
 # Die Grundlagen der modernen Technologie
 
