--- a/content/workshop/2025-07-23-test.md
+++ b/content/workshop/2025-07-23-test.md
@@ -1,5 +1,5 @@
 ---
-title: Workshop 2023
+title: Internet of things (IoT)
 date: 2025-07-22T10:47:00+02:00
 image: images/articles/workshop.jpg
 articleInfo:
