--- a/content/program/2025-07-24-programm-2025.md
+++ b/content/program/2025-07-24-programm-2025.md
@@ -1,6 +1,5 @@
 ---
 title: Aktuelles Programm
 date: 2025-07-24T10:43:00+02:00
-poster: /images/articles/sfw-program.jpg
-programmImg: /images/articles/sfw-program.jpg
+programImg: /images/articles/sfw-program.jpg
 ---
