Update Workshop “2025-07-22-test2”

--- a/content/workshop/2025-07-22-test2.md
+++ b/content/workshop/2025-07-22-test2.md
@@ -3,18 +3,12 @@ title: Python-Programmierung
 date: 2025-07-22T10:47:00+02:00
 image: images/articles/workshop.jpg
 articleInfo:
-  description: "Der Einsatz von MSTeams erlaubte es einigen Werkstätten auch im
-    Distanz-Unterricht Fortschritte zu machen. Gerade die Werkstatt von
-    Maximilian Gollwitzer ist hier zu erwähnen: Er hat sich selbstständig
-    jüngere Mitschüler gesucht, um Ihnen seine Programmierkenntnisse in der
-    Sprache Python zu vermitteln. Die begeisterten Schüler nahmen das Angebot in
-    der Lockdown-Phase sehr gerne an. Das interessante Angebot zog in einem
-    zweiten Schritt sogar noch zusätzliche Programmierer an, so dass nun in zwei
-    Gruppen 9 Jungs und 4 Mädchen coden. I"
+  description: ""
   body: >-
     
     Der Einsatz von MSTeams erlaubte es einigen Werkstätten auch im Distanz-Unterricht Fortschritte zu machen. Gerade die Werkstatt von Maximilian Gollwitzer ist hier zu erwähnen: Er hat sich selbstständig jüngere Mitschüler gesucht, um Ihnen seine Programmierkenntnisse in der Sprache Python zu vermitteln. Die begeisterten Schüler nahmen das Angebot in der Lockdown-Phase sehr gerne an. Das interessante Angebot zog in einem zweiten Schritt sogar noch zusätzliche Programmierer an, so dass nun in zwei Gruppen 9 Jungs und 4 Mädchen coden. In MSTeams konnte der Werkstattleiter seine Präsentationen und Screenshots per Bildschirmfreigabe zeigen sowie versenden. Oft wurde das wöchentliche Treffen zeitlich ausgedehnt und Maximilian musste überziehen, um den Wissensdurst zu stillen. Nach seinem sehr erfolgreichen Abitur kann Maximilian seine Mitschüler  nun noch bis zum Ende des Schuljahres in Präsenz unterrichten.
   date: 2025-07-24T09:28:00+02:00
   image: /images/articles/workshop-2.png
+  author: Jürgen Heiß
 ---
 Das ist ein Test
