--- a/content/workshop/2025-07-22-test.md
+++ b/content/workshop/2025-07-22-test.md
@@ -1,5 +1,5 @@
 ---
-title: Workshop 2024 "Gesteine und Minerale"
+title: Gesteine und Minerale
 date: 2025-07-22T10:47:00+02:00
 image: images/articles/workshop.jpg
 articleInfo:
@@ -11,18 +11,3 @@ articleInfo:
     Welche Farbe hat mein Stein? Wie sieht der Stein unter dem Mikroskop aus? Enthält er Kristalle oder ist er geschichtet? – Die Antworten auf diese und andere Fragen suchten die Teilnehmer:innen der Geologiewerkstatt, um bestimmen zu können, welches Gestein bzw. welches Mineral sie jeweils vor sich haben. Als Ergebnis wurde ein Schaukasten gestaltet, in dem nun jeder Vorbeigehende die Ergebnisse der Experimente sehen kann. Mit diversen Sinnen sowie experimentellen Versuchen konnte jeder Stein detailliert analysiert und anschließend beschrieben werden. Natürlich wurden die Schüler:innen von Experten unterstützt. Herr Dr. Holzförster und Frau Mack vom GEO-Zentrum an der KTB in Windischeschenbach leiteten die fünf Kurseinheiten an. Dabei durfte auch ein Besuch im GEO-Zentrum natürlich nicht fehlen, um einen ersten Einblick in das Experimentieren und Erforschen von Gesteinen zu bekommen.  Diese Aufgabe soll aber nur der Anfang sein: Die circa 500 Steine umfassende Gesteine- und Mineralesammlung an unserer Schule soll im Verlauf des kommenden Schuljahres von dem P-Seminar „Geologie“ weiter entdeckt werden, ebenso werden die eindrucksvollsten Exemplare ausgestellt.
   author: Tamara Lax
 ---
-# Die Grundlagen der modernen Technologie
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. **Duis aute irure dolor in reprehenderit** in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-
-## Entwicklung und Innovation
-
-Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. *Nemo enim ipsam voluptatem* quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-
-### Wichtige Aspekte der Implementierung
-
-At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
-
-**Besonders hervorzuheben sind folgende Punkte:**
-
-Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
