--- a/content/workshop/2025-07-23-test.md
+++ b/content/workshop/2025-07-23-test.md
@@ -11,3 +11,8 @@ articleInfo:
   image: /images/articles/workshop-3.jpg
   author: Jürgen Heiß, OStR
 ---
+Der Einsatz eines Raspberry Pi war ausreichend, um die Server-Überwachung von einer Homepage zu realisieren. Das realitätsnahe Szenario ist so aufgebaut, dass innerhalb der Schule ein Blaulicht zu leuchten beginnt, wenn die digitale Anzeige des Vertretungsplans nicht einwandfrei funktioniert. Die Mitarbeiter der Firma i-novation haben diese spielerische Methode kreiert, um den Schülern das ernste Szenario eines Server-Fehlers bzw. eine Serverüberwachung über das Internet zu vermitteln. Dafür hat sich der Informatiker Andreas Popel über mehrere Wochen hinweg immer montags mit den Schülern und zwei Lehrkräften getroffen. Mittels des MQTT-Protokolls war es möglich, die Firewall zu umgehen und die Architektur zu vervollständigen, die von der Website über den Uptime Robot zum Rasperry Pi reicht. Über die GPIO-Pins wird dann das Blaulicht angesteuert. Alle Scripte wurden von der Schülern in der Sprache Python programmiert, teils erweitert und sogar um eigene Methoden verfeinert. Zuletzt wurde an einem zweiten Raspberry Pi gezeigt, dass das Erlernte zusammengeführt werden kann und die Komponenten so im Schulhaus installiert und verbunden werden können, dass innerhalb des Intranet der Web-Alarm anschlägt.
+
+
+
+Der geplante Besuch der Räumlichkeiten von i-novation musste Corona-bedingt leider verlegt werden. Es ist auf jeden Fall angedacht, dies nachzuholen. Dabei wird sicher für alle Beteiligten interessant zu sehen sein, wie die Experten von i-novation in der Praxis arbeiten, um die Unternehmen aus der Region in die Digitalisierung zu begleiten. Dafür erstellen sie vor allem intuitive Software, die einzigartige Nutzererlebnisse in einer digitalen Geschäftswelt erlauben. StR Jürgen Heiß vom Kepler-Gymnasium Weiden ist sich sicher, dass mit den Erfahrungen in der Corona-Krise auch vermehrt der Einsatz von digitalen Lösungen im Schulalltag Einzug hält. „Die Schüler der SFW sind bestens darauf vorbereitet“, zieht der Lehrer sein Fazit.
