--- a/content/workshop/2025-07-22-test.md
+++ b/content/workshop/2025-07-22-test.md
@@ -6,141 +6,49 @@ articleInfo:
   date: 2025-07-24T09:25:00+02:00
   image: /images/articles/workshop.jpg
   description: ""
-  body: >-
-    Welche Farbe hat mein Stein? Wie sieht der Stein unter dem Mikroskop aus?
-    Enthält er Kristalle oder ist er geschichtet? – Die Antworten auf diese und
-    andere Fragen suchten die Teilnehmer:innen der Geologiewerkstatt, um
-    bestimmen zu können, welches Gestein bzw. welches Mineral sie jeweils vor
-    sich haben. Als Ergebnis wurde ein Schaukasten gestaltet, in dem nun jeder
-    Vorbeigehende die Ergebnisse der Experimente sehen kann. Mit diversen Sinnen
-    sowie experimentellen Versuchen konnte jeder Stein detailliert analysiert
-    und anschließend beschrieben werden. Natürlich wurden die Schüler:innen von
-    Experten unterstützt. Herr Dr. Holzförster und Frau Mack vom GEO-Zentrum an
-    der KTB in Windischeschenbach leiteten die fünf Kurseinheiten an. Dabei
-    durfte auch ein Besuch im GEO-Zentrum natürlich nicht fehlen, um einen
-    ersten Einblick in das Experimentieren und Erforschen von Gesteinen zu
-    bekommen.  Diese Aufgabe soll aber nur der Anfang sein: Die circa 500 Steine
-    umfassende Gesteine- und Mineralesammlung an unserer Schule soll im Verlauf
-    des kommenden Schuljahres von dem P-Seminar „Geologie“ weiter entdeckt
-    werden, ebenso werden die eindrucksvollsten Exemplare ausgestellt.
-
-
-    ## Überschrift 2
-
-
-    ##### Überschrift 5
-
-
-    * Bullet 1
-
-    * Bullet 2
-
-
-    1. Number 1 
-
-    2. Number 2
-
-
-    > Zitata
-
-
-    * ```javascript
-      print('Hello World')
-
-
-      ```
-
-      **Bold**
-      *Italic*
-
-      [helloworld.com](helloworld.com)
-
-    ![](/images/articles/course.jpg)
-
-
-    [](helloworld.com)
   author: Tamara Lax
 ---
+
 Welche Farbe hat mein Stein? Wie sieht der Stein unter dem Mikroskop aus?
-
 Enthält er Kristalle oder ist er geschichtet? – Die Antworten auf diese und
-
 andere Fragen suchten die Teilnehmer:innen der Geologiewerkstatt, um
-
 bestimmen zu können, welches Gestein bzw. welches Mineral sie jeweils vor
-
 sich haben. Als Ergebnis wurde ein Schaukasten gestaltet, in dem nun jeder
-
 Vorbeigehende die Ergebnisse der Experimente sehen kann. Mit diversen Sinnen
-
 sowie experimentellen Versuchen konnte jeder Stein detailliert analysiert
-
-und anschließend beschrieben werden. Natürlich wurden die Schüler:innen von
-
+und anschließend beschrieben werden. Natürlich wurden die Schüler:innen von
 Experten unterstützt. Herr Dr. Holzförster und Frau Mack vom GEO-Zentrum an
-
 der KTB in Windischeschenbach leiteten die fünf Kurseinheiten an. Dabei
-
 durfte auch ein Besuch im GEO-Zentrum natürlich nicht fehlen, um einen
-
 ersten Einblick in das Experimentieren und Erforschen von Gesteinen zu
-
-bekommen.  Diese Aufgabe soll aber nur der Anfang sein: Die circa 500 Steine
-
+bekommen.  Diese Aufgabe soll aber nur der Anfang sein: Die circa 500 Steine
 umfassende Gesteine- und Mineralesammlung an unserer Schule soll im Verlauf
-
 des kommenden Schuljahres von dem P-Seminar „Geologie“ weiter entdeckt
-
 werden, ebenso werden die eindrucksvollsten Exemplare ausgestellt.
 
+## Überschrift 2
 
+##### Überschrift 5
 
-\## Überschrift 2
+- Bullet 1
 
-
-
-\##### Überschrift 5
-
-
-
-\* Bullet 1
-
-\* Bullet 2
-
-
+- Bullet 2
 
 1. Number 1
 
 2. Number 2
 
+> Zitata
 
+- ```javascript
+  print("Hello World");
+  ```
 
-\> Zitata
+  **Bold**
+  _Italic_
 
+  [helloworld.com](helloworld.com)
 
+![](/images/articles/course.jpg)
 
-\* \`\``javascript
-
-  print('Hello World')
-
-
-
-  \`\``
-
-
-
-  \*\*Bold\*\*
-
-  \*Italic\*
-
-
-
-  \[helloworld.com](helloworld.com)
-
-
-
-!\[](/images/articles/course.jpg)
-
-
-
-\[](helloworld.com)
+[](helloworld.com)
