Update Workshop “2025-07-23-test5”

--- a/content/workshop/2025-07-23-test5.md
+++ b/content/workshop/2025-07-23-test5.md
@@ -7,6 +7,7 @@ articleInfo:
   description: ""
   image: /images/articles/workshop-4.jpg
   author: M. Lindner
+  caption: Zusammenbau einer Ladebuchse
 ---
 
 Die Schülerforschungswerkstatt (SFW) des Kepler-Gymnasiums hatte für interessierte Schülerinnen und Schüler der 9., 10. und 11. Jahrgangsstufe ein besonderes Angebot: In Kooperation mit der Firma Nexans autoelectric aus Floß wurde an vier Terminen im April und Mai 2023 ein Workshop abgehalten, in dessen Verlauf den Jugendlichen das Thema E-Mobilität nähergebracht werden sollte. In der ersten Einheit stellte Herr Döllinger von der Firma Nexans autoelectric die Grundlagen der Elektro-Mobilität anhand einiger Anschauungsstücke vor. Nach einer Darlegung der Geschichte der E-Mobilität wurde der Unterschied des elektrischen Antriebs von einem konventionellen Antrieb geklärt. Gemeinsam mit den SchülerInnen erörterte Herr Döllinger die Chancen und die Schwierigkeiten der E-Mobilität. Anschließend wurden die Fragen geklärt, wie der Ladeprozess funktioniert und worin sich reine Elektroautos und Hybride unterscheiden. Zum Abschluss der ersten Einheit zeigten der Nexans-Mitarbeiter Herr Döllinger und die Mitarbeiterin Frau Reiter den TeilnehmerInnen das mitgebrachte E-Auto.
