Update Workshop “2025-07-22-test”

--- a/content/workshop/2025-07-22-test.md
+++ b/content/workshop/2025-07-22-test.md
@@ -7,8 +7,8 @@ articleInfo:
   image: /images/articles/workshop.jpg
   description: ""
   author: Tamara Lax
+  caption: Alle hören gespannt zu, was Frau Mack erzählt
 ---
-
 Welche Farbe hat mein Stein? Wie sieht der Stein unter dem Mikroskop aus?
 Enthält er Kristalle oder ist er geschichtet? – Die Antworten auf diese und
 andere Fragen suchten die Teilnehmer:innen der Geologiewerkstatt, um
@@ -30,22 +30,20 @@ werden, ebenso werden die eindrucksvollsten Exemplare ausgestellt.
 
 ##### Überschrift 5
 
-- Bullet 1
-
-- Bullet 2
+* Bullet 1
+* Bullet 2
 
 1. Number 1
-
 2. Number 2
 
 > Zitata
 
-- ```javascript
+* ```javascript
   print("Hello World");
   ```
 
   **Bold**
-  _Italic_
+  *Italic*
 
   [helloworld.com](helloworld.com)
 
