Update Workshop “2025-07-23-test”

--- a/content/workshop/2025-07-23-test.md
+++ b/content/workshop/2025-07-23-test.md
@@ -7,6 +7,8 @@ articleInfo:
   date: 2025-07-24T09:29:00+02:00
   image: /images/articles/workshop-3.jpg
   author: Jürgen Heiß, OStR
+  caption: Die Firma i-novation aus Weiden engagiert sich in der
+    Schülerforschungswerkstatt (SFW) des Kepler-Gymnasiums Weiden
 ---
 
 Der Einsatz eines Raspberry Pi war ausreichend, um die Server-Überwachung von einer Homepage zu realisieren. Das realitätsnahe Szenario ist so aufgebaut, dass innerhalb der Schule ein Blaulicht zu leuchten beginnt, wenn die digitale Anzeige des Vertretungsplans nicht einwandfrei funktioniert. Die Mitarbeiter der Firma i-novation haben diese spielerische Methode kreiert, um den Schülern das ernste Szenario eines Server-Fehlers bzw. eine Serverüberwachung über das Internet zu vermitteln. Dafür hat sich der Informatiker Andreas Popel über mehrere Wochen hinweg immer montags mit den Schülern und zwei Lehrkräften getroffen. Mittels des MQTT-Protokolls war es möglich, die Firewall zu umgehen und die Architektur zu vervollständigen, die von der Website über den Uptime Robot zum Rasperry Pi reicht. Über die GPIO-Pins wird dann das Blaulicht angesteuert. Alle Scripte wurden von der Schülern in der Sprache Python programmiert, teils erweitert und sogar um eigene Methoden verfeinert. Zuletzt wurde an einem zweiten Raspberry Pi gezeigt, dass das Erlernte zusammengeführt werden kann und die Komponenten so im Schulhaus installiert und verbunden werden können, dass innerhalb des Intranet der Web-Alarm anschlägt.
