Update Workshop “2025-07-22-test”

--- a/content/workshop/2025-07-22-test.md
+++ b/content/workshop/2025-07-22-test.md
@@ -35,16 +35,11 @@ werden, ebenso werden die eindrucksvollsten Exemplare ausgestellt.
 1. Number 1
 2. Number 2
 
-> Zitata
+> Zitat
 
-* ```javascript
-  print("Hello World");
-  ```
+*Italic*
 
-  **Bold**
-  *Italic*
-
-  [helloworld.com](helloworld.com)
+* [helloworld.com](helloworld.com)
 
 ![](/images/articles/course.jpg)
 
