Update Workshop “2025-07-22-test”

--- a/content/workshop/2025-07-22-test.md
+++ b/content/workshop/2025-07-22-test.md
@@ -6,7 +6,7 @@ articleInfo:
   image: /images/articles/workshop.jpg
   description: ""
   author: Tamara Lax
-  caption: Alle hören gespannt zu, was Frau Mack erzählt
+  caption: ""
 ---
 Welche Farbe hat mein Stein? Wie sieht der Stein unter dem Mikroskop aus?
 Enthält er Kristalle oder ist er geschichtet? – Die Antworten auf diese und
