Update Workshop “2025-07-22-test”

--- a/content/workshop/2025-07-22-test.md
+++ b/content/workshop/2025-07-22-test.md
@@ -23,29 +23,4 @@ ersten Einblick in das Experimentieren und Erforschen von Gesteinen zu
 bekommen.  Diese Aufgabe soll aber nur der Anfang sein: Die circa 500 Steine
 umfassende Gesteine- und Mineralesammlung an unserer Schule soll im Verlauf
 des kommenden Schuljahres von dem P-Seminar „Geologie“ weiter entdeckt
-werden, ebenso werden die eindrucksvollsten Exemplare ausgestellt.
-
-## Überschrift 2
-
-##### Überschrift 5
-
-* Bullet 1
-* Bullet 2
-
-1. Number 1
-2. Number 2
-
-> Zitata
-
-* ```javascript
-  print("Hello World");
-  ```
-
-  **Bold**
-  *Italic*
-
-  [helloworld.com](helloworld.com)
-
-![](/images/articles/course.jpg)
-
-[](helloworld.com)
+werden, ebenso werden die eindrucksvollsten Exemplare ausgestellt.[](helloworld.com)
